--- a/scss/components/_some-carousel.scss
+++ b/scss/components/_some-carousel.scss
@@ -302,8 +302,8 @@
     height: 1.3rem;
 
     @media (min-width: 992px) {
-        width: 2.3rem;
-        height: 2.3rem;
+        width: 2.5rem;
+        height: 2.5rem;
     }
 
     &-card {
