--- a/scss/components/_testimonial.scss
+++ b/scss/components/_testimonial.scss
@@ -9,6 +9,7 @@
 .testimonial {
     margin-top: 7.5rem;
     height: 20.5625rem;
+    max-width: 28rem;
     background: transparent
         linear-gradient(
             360deg,
@@ -20,6 +21,7 @@
     @media (min-width: 992px) {
         height: 64rem;
         width: 92rem;
+        max-width: 87rem;
     }
 }
 
@@ -77,4 +79,29 @@
         margin-left: 0;
         margin-top: 1.5rem;
     }
+}
+
+.people-carousel {
+    margin-left: 0.5rem;
+    margin-top: -3rem;
+    // overflow: scroll;
+
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    @media (min-width: 992px) {
+        overflow: hidden;
+    }
+}
+
+.some-carousel {
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.testimonial-items {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    padding-right: 20px;
 }
